# webpush-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: release.yml
crates/webpush-rs/: Cargo.toml  pyproject.toml
crates/webpush-rs/src/: lib.rs
src/: bench.rs  core.rs
